# gnnbook

./: LICENSE  README.md  eratta.md  errata.md  pyproject.toml
notebooks/: algo2.1.ipynb  algo2.2.ipynb  algo5.1.ipynb  ex3.1.ipynb  ex4.1.ipynb  ex6.8.ipynb  fig5.1.ipynb  gat.ipynb  graphfourier.ipynb  oversmoothing.ipynb
