[tool.poetry]
name = "gnnbook"
version = "0.1.0"
description = ""
authors = ["joisino <joisinoo@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
scipy = "^1.9.1"
matplotlib = "^3.7.2"
networkx = "^3.1"
scikit-learn = "^1.3.2"
torch = {version = "^2.2.2+cpu", source = "pytorch-cpu"}
torch-geometric = "^2.5.2"
pyg-lib = {version = "^0.4.0+pt22cpu", source = "pyg-cpu"}
torch-scatter = {version = "^2.1.2+pt22cpu", source = "pyg-cpu"}
torch-sparse = {version = "^0.6.18+pt22cpu", source = "pyg-cpu"}
torch-cluster = {version = "^1.6.3+pt22cpu", source = "pyg-cpu"}
notebook = "^7.1.3"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pyg-cpu"
url = "https://data.pyg.org/whl/torch-2.2.0+cpu.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
